Added venue to frontpage and sponsors to sponsors page

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ title: 2012
 	It is free for every child to enter so long as they are aged 18 or under and have a rudimentary understanding of programming &#8212; although we do send out free resources in advance of the week for those who are unsure of their skills.</p>
 
 	<h3>Festival of code</h3>
-	<p>At the end of the week everyone piles on coaches, trains and cars to a lovely venue where they will have a night of camp and code, pizza and camaraderie. On the Saturday afternoon they will show what they have made to an audience of their peers, press, government and industry. Prizes are awarded and lives are changed.
+	<p>At the end of the week everyone piles on coaches, trains and cars to <a href="http://www.custardfactory.co.uk/">The Custard Factory</a> in Birmingham, where they will have a night of code, pizza and camaraderie with everyone sleeping on floors all over the site. Pack a sleeping bag! On the Saturday afternoon they will show what they have made to an audience of their peers, press, government and industry. Prizes are awarded and lives are changed.
 
 	<br /><br />
 
