--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -61,6 +61,10 @@ title: Sponsors
             <p><a href="http://www.sleepydog.co.uk/"><img alt="Sleepydog" src="/img/sponsors/sleepydog.png" /></a></p>
         </div><!-- closing grid3 -->
 
+        <div class="grid3">
+            <p><a href="http://www.cloudfoundry.com/"><img alt="Cloud Foundry" src="/img/sponsors/cloudfoundry.jpg" /></a></p>
+        </div><!-- closing grid3 -->
+
     </div><!-- closing container -->
 </div><!-- closing section5 -->
 
@@ -79,6 +83,12 @@ title: Sponsors
         <div class="grid3">
             <p><a href="http://developer.pearson.com"><img alt="Pearson" src="/img/sponsors/pearson.jpg" /></a></p>
         </div><!-- closing grid3 -->
+
+        <div class="grid3">
+            <p><a href="http://aqa.org.uk/"><img alt="The Assessment and Qualifications Alliance (AQA)" src="/img/sponsors/agant.png" /></a></p>
+        </div><!-- closing grid3 -->
+
+        
     </div><!-- closing container -->
 </div><!-- closing section 6 -->
 
