Added venue to frontpage and sponsors to sponsors page

--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -85,7 +85,7 @@ title: Sponsors
         </div><!-- closing grid3 -->
 
         <div class="grid3">
-            <p><a href="http://aqa.org.uk/"><img alt="The Assessment and Qualifications Alliance (AQA)" src="/img/sponsors/agant.png" /></a></p>
+            <p><a href="http://aqa.org.uk/"><img alt="The Assessment and Qualifications Alliance (AQA)" src="/img/sponsors/aqa-logo-200x100.gif" /></a></p>
         </div><!-- closing grid3 -->
 
         
