hanged frontpage to refelect new venue and sponsors page to show new sponsors

--- a/index.html
+++ b/index.html
@@ -9,27 +9,27 @@ title: 2012
     <div class="container">
     <div id="foc" class="title"><h1>YRS Festival of Code 6<sup>th</sup> &rarr; 12<sup>th</sup> August, 2012</h1></div>
 
-	<iframe width="560" height="315" src="http://www.youtube-nocookie.com/embed/2Ws57UT_xX0" frameborder="0" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="http://www.youtube-nocookie.com/embed/2Ws57UT_xX0" frameborder="0" allowfullscreen></iframe>
 
-	<br /><br />
+  <br /><br />
 
     <p id="top_paragraph">Our primary focus is to find and foster the young children and teenagers who are driven to teaching themselves how to code, how to program the world around them. This is a mighty challenge though well-supported with free tutorials online, but inevitably an isolating and solitary activity. 
 
     <br /><br />
 
-	The event in 2012 runs from the 6<sup>th</sup> to the 12<sup>th</sup> August. During that week businesses, small and large, around the country act as hosts to local young people, YRS alumni, Rewired State mentors and other volunteers. A challenge is set to build digital products: mobile and web, using at least one piece of open data.
+  The event in 2012 runs from the 6<sup>th</sup> to the 12<sup>th</sup> August. During that week businesses, small and large, around the country act as hosts to local young people, YRS alumni, Rewired State mentors and other volunteers. A challenge is set to build digital products: mobile and web, using at least one piece of open data.
 
-	<br /><br />
+  <br /><br />
 
-	It is free for every child to enter so long as they are aged 18 or under and have a rudimentary understanding of programming &#8212; although we do send out free resources in advance of the week for those who are unsure of their skills.</p>
+  It is free for every child to enter so long as they are aged 18 or under and have a rudimentary understanding of programming &#8212; although we do send out free resources in advance of the week for those who are unsure of their skills.</p>
 
-	<h3>Festival of code</h3>
-	<p>At the end of the week everyone piles on coaches, trains and cars to a lovely venue where they will have a night of camp and code, pizza and camaraderie. On the Saturday afternoon they will show what they have made to an audience of their peers, press, government and industry. Prizes are awarded and lives are changed.
+  <h3>Festival of code</h3>
+  <p>At the end of the week everyone piles on coaches, trains and cars to <a href="http://www.custardfactory.co.uk/">The Custard Factory</a> in Birmingham, where they will have a night of code, pizza and camaraderie with everyone sleeping on floors all over the site. Pack a sleeping bag! On the Saturday afternoon they will show what they have made to an audience of their peers, press, government and industry. Prizes are awarded and lives are changed.
 
-	<br /><br />
+  <br /><br />
 
-	<iframe width="560" height="315" src="http://www.youtube-nocookie.com/embed/odT4cgd7d8c" frameborder="0" allowfullscreen></iframe>
-	</p>
+  <iframe width="560" height="315" src="http://www.youtube-nocookie.com/embed/odT4cgd7d8c" frameborder="0" allowfullscreen></iframe>
+  </p>
 
    </div><!-- closing container -->
 </div><!-- closing section1 -->
