chaged to parents index

--- a/parents/index.html
+++ b/parents/index.html
@@ -24,7 +24,7 @@ title: Parents' Information
 
             <h3>The Friday and Saturday festival</h3>
 
-            <p>This year all of the young people who take part in YRS are invited to spend the Friday (and Saturday) night at the festival of code. They will be sleeping in tents and coding, practising their presentations and so on &#8212; as well as all meeting each other and having a brilliant time.
+            <p>This year all of the young people who take part in YRS are invited to spend the Friday (and Saturday) night at the festival of code. They will be sleeping on the floor and coding, practising their presentations and so on &#8212; as well as all meeting each other and having a brilliant time.
 
             <br /><br />
 
@@ -46,7 +46,6 @@ title: Parents' Information
             <h5>For the Festival of Code</h5>
             <ul>
                 <li><p>Funds to get to the site</p></li>
-                <li><p>A tent</p></li>
                 <li><p>Sleeping bag</p></li>
                 <li><p>Toiletries</p></li>
                 <li><p>Your contact details</p></li>
