further changes to parents index

--- a/parents/index.html
+++ b/parents/index.html
@@ -80,10 +80,11 @@ title: Parents' Information
             <div class="title"><h4>When</h4></div>
             <p>August 6, 2012 09:30<br />→ August 12, 2012 13:00</p>
 
-            <!-- <div class="title"><h4>Where</h4></div>
-            <p>The National Museum <br />of Computing<br />
-            Bletchley Park<br />
-            Bletchley</p> -->
+            <div class="title"><h4>Where</h4></div>
+            <p>The Custard Factory<br />
+            Gibb Street<br />
+            Birmingham<br />
+            B9 4AA</p>
 
             <div class="title"><h4>Contacts</h4></div>
             <p>angijlong@gmail.com</p>
