--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -75,7 +75,7 @@ title: Sponsors
         </div><!-- closing grid3 -->
 
         <div class="grid3">
-            <p><a href="http://aqa.org.uk/"><img alt="The Assessment and Qualifications Alliance (AQA)" src="/img/sponsors/aqa-logo-200x100.gif" /></a></p>
+            <p><a href="http://web.aqa.org.uk/qual/newgcses/ict/computer-science-overview.php?id=10&__utma=43460533.1102982496.1333622839.1333622839.1334133713.2&__utmb=43460533.4.10.1340882663&__utmc=43460533&__utmx=-&__utmz=43460533.1333622839.1.1.utmcsr=intranet|utmccn=(referral)|utmcmd=referral|utmcct=/&__utmv=-&__utmk=58535023"><img alt="The Assessment and Qualifications Alliance (AQA)" src="/img/sponsors/aqa-logo-200x100.gif" /></a></p>
         </div><!-- closing grid3 -->
 
         
