Final Festival page v2

--- a/festival/index.html
+++ b/festival/index.html
@@ -64,7 +64,7 @@ wait to see what they can produce."</p>
 
 <p>The schedule for the Festival of code in full is here: <a href="http://lanyrd.com/2012/festival-of-code/">Festival of Code on Lanyrd</a></p>
 
-<p>To attend the festival on the Saturday show and tell, please sign up using the form <a href="">here</a>. <strong>Be warned, we are proudly not funded by government, your tax money is better spent elsewhere, we rely only on sponsorship and run this event at no profit, every penny goes into making this happen (not people fees) - which is quite expensive even though we get away with a lot of donated stuff... and people. However, we cannot stretch to supplying you with food and booze, even though we would love to, so please bring cash with you.</strong></p> 
+<p>To attend the festival on the Saturday show and tell, please sign up using the form <a href="http://yrs12foc.eventbrite.com/">here</a>. <strong>Be warned, we are proudly not funded by government, your tax money is better spent elsewhere, we rely only on sponsorship and run this event at no profit, every penny goes into making this happen (not people fees) - which is quite expensive even though we get away with a lot of donated stuff... and people. However, we cannot stretch to supplying you with food and booze, even though we would love to, so please bring cash with you.</strong></p> 
 
     </div><!-- closing container -->
 </div><!-- closing form -->
