--- a/festival/index.html
+++ b/festival/index.html
@@ -10,9 +10,9 @@ title: Festival of Code
         </div>
         <p>Friday 10th to Sunday 12th sees the grand final of the Young Rewired State 2012 week. On the Friday night the young programmers will all come to the Custard Factory in Birmingham and have fireside chats whilst they code with wonderful people who are programmers doing great things, including representatives from Raspberry Pi, London Zoo and twilio amongst many others. Whilst they finish coding their apps and preparing their presentations they will be able to hear, chat and interact with some of the UK's greatest digital visionaries.</p>
 
-        <p>They will have a massive sleepover in the Custard Factory preparing for the Saturday show and tell. Saturday brings a morning of heats where each centre will present in five concurrent streams, to foive panels of esteemed judges (tba) with winners in four prize categories yet to be announced going forward to the Grand Finale in the afternoon.</p>
+        <p>They will have a massive sleepover in the Custard Factory preparing for the Saturday show and tell. Saturday brings a morning of heats where each centre will present in five concurrent streams, to five panels of esteemed judges with winners in four prize categories yet to be announced going forward to the Grand Finale in the afternoon.</p>
 
-        <p>The afternoon finale will be compered by Dallas Campbell from Bang Goes the Theory, who is also a morning judge - a busy lad. [insert Dallas's quote]
+        <p>The afternoon finale will be compered by Dallas Campbell from Bang Goes the Theory, who is also a morning judge - a busy lad.
 
             <h3>The Finale judges are:</h3>
                 
