added credit to Lily's photo

--- a/festival/index.html
+++ b/festival/index.html
@@ -19,6 +19,8 @@ title: Festival of Code
             <h3>Lily Cole</h3>
             
             <img src="../img/lilycole.jpg">
+            Photograph by James Moriarty for <a href="www.thenorthcircular.com">www.thenorthcircular.com</a>
+            
             <p>The actress and ethical campaigner was was originally introduced to Rewired State to
 help develop her social giving site <a href="http://impossible.com">impossible.com</a>. The new tech entrepreneur said about being
 asked to judge for Young Rewired State; "I am really looking forward to Young Rewired State. I
