--- a/festival/index.html
+++ b/festival/index.html
@@ -42,8 +42,7 @@ brightest young coders' work. And what better year than Turing's centenary?"</p>
 
 <img src="../img/aral-headshot-high-res.jpg">
 
-<p>Designer, developer and entrepreneur of web consultancy Naklab and design and
-development training agency Geek Ninja Factory said; "Programming taught me that I can make
+<p>Experienced designer dnd developer said; "Programming taught me that I can make
 things, that I can change the world around me, and that my imagination truly is the only limit. That's
 why events like Festival of Code are so important. Programming is the new literacy and initiatives
 like the Festival of Code are essential catalysts in inspiring and empowering the Shakespeares of
