added twilio to sponsors page

--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -55,6 +55,10 @@ title: Sponsors
             <p><a href="http://www.cloudfoundry.com/"><img alt="Cloud Foundry" src="/img/sponsors/cloudfoundry.jpg" /></a></p>
         </div><!-- closing grid3 -->
 
+        <div class="grid3">
+            <p><a href="http://www.twilio.com"><img alt="twilio" src="/img/sponsors/twilio_downloadable_logobrand.png" /></a></p>
+        </div><!-- closing grid3 -->
+
     </div><!-- closing container -->
 </div><!-- closing section3 -->
 
