--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -9,6 +9,8 @@ title: Sponsors
         <p>We're enormously thankful to the following organizations
         and people who've funded YRS2012. If you would like to make
         a personal donation, please contact <a href="mailto:emma@rewiredstate.org">Emma</a>.<br /><br /> Thank you.</p>
+        
+        <p>In addition to the sponsors listed here, Young Rewired State crowdfunded £20,000 through PeopleFundIt and are grateful to every person who donated through there. See who helped us out <a href="http://www.peoplefund.it/young-rewired-state/">here</a>.</p> 
     </div><!-- closing container -->
 </div><!-- closing section1 -->
 
