--- a/festival/index.html
+++ b/festival/index.html
@@ -67,5 +67,15 @@ wait to see what they can produce."</p>
 
 <p>To attend the festival on the Saturday show and tell, please sign up using the form <a href="http://yrs12foc.eventbrite.com/">here</a>. <strong>Be warned, we are proudly not funded by government, your tax money is better spent elsewhere, we rely only on sponsorship and run this event at no profit, every penny goes into making this happen (not people fees) - which is quite expensive even though we get away with a lot of donated stuff... and people. However, we cannot stretch to supplying you with food and booze, even though we would love to, so please bring cash with you for the bar and food concessions we will have on site.</strong></p> 
 
+<p>A big Thank You to the businesses and organisations of Birmingham that have helped us be able to put on this year's Festival of code.</p>
+
+        <div class="grid3">
+            <p><img src="/img/sponsors/lara-1.jpg"></p>
+        </div><!-- closing grid3 -->
+
+        <div class="grid3">
+            <p><img src="/img/sponsors/CustardFactory.jpg"></p>
+        </div><!-- closing grid3 -->
+
     </div><!-- closing container -->
 </div><!-- closing form -->
