added links to logos on festival page

--- a/festival/index.html
+++ b/festival/index.html
@@ -70,11 +70,11 @@ wait to see what they can produce."</p>
 <p>A big Thank You to the businesses and organisations of Birmingham that have helped us be able to put on this year's Festival of code.</p>
 
         <div class="grid3">
-            <p><img src="/img/sponsors/lara-1.jpg"></p>
+          <p><<a href="http://uk.linkedin.com/in/lararatnaraja"><img alt="Lara Ratnaraja" src="/img/sponsors/lara-1.jpg"></a></p>
         </div><!-- closing grid3 -->
 
         <div class="grid3">
-            <p><img src="/img/sponsors/CustardFactory.jpg"></p>
+          <p><<a href="http://www.custardfactory.co.uk/"><img alt="Custard Factory" src="/img/sponsors/CustardFactory.jpg"></a></p>
         </div><!-- closing grid3 -->
 
     </div><!-- closing container -->
