added big cat group to festival page

--- a/festival/index.html
+++ b/festival/index.html
@@ -76,6 +76,10 @@ wait to see what they can produce."</p>
         <div class="grid3">
           <p><a href="http://www.custardfactory.co.uk/"><img alt="Custard Factory" src="/img/sponsors/CustardFactory.jpg"></a></p>
         </div><!-- closing grid3 -->
+        
+        <div class="grid3">
+          <p><a href="http://bigcatgroup.co.uk"><img alt="Big Cat Group" src="/img/sponsors/BigCat.jpg"></a></p>
+        </div><!-- closing grid3 -->
 
     </div><!-- closing container -->
 </div><!-- closing form -->
