added more logos to festival page

--- a/festival/index.html
+++ b/festival/index.html
@@ -81,5 +81,13 @@ wait to see what they can produce."</p>
           <p><a href="http://bigcatgroup.co.uk"><img alt="Big Cat Group" src="/img/sponsors/BigCat.jpg"></a></p>
         </div><!-- closing grid3 -->
 
+        <div class="grid3">
+          <p><a href="www.bcu.ac.uk/business"><img alt="Birmingham City University" src="/img/sponsors/BCULogo.jpg"></a></p>
+        </div><!-- closing grid3 -->
+        
+        <div class="grid3">
+          <p><a href="http://www.birmingham.ac.uk/index.aspx"><img alt="University of Birmingham" src="/img/sponsors/BhamUni.jpg"></a></p>
+        </div><!-- closing grid3 -->
+
     </div><!-- closing container -->
 </div><!-- closing form -->
