added microteam to festival page

--- a/festival/index.html
+++ b/festival/index.html
@@ -89,5 +89,9 @@ wait to see what they can produce."</p>
           <p><a href="http://www.birmingham.ac.uk/index.aspx"><img alt="University of Birmingham" src="/img/sponsors/BhamUni.jpg"></a></p>
         </div><!-- closing grid3 -->
 
+        <div class="grid3">
+          <p><a href="http://www.microteam.co.uk"><img alt="Microteam Limited" src="/img/sponsors/MTlogo.jpg"></a></p>
+        </div><!-- closing grid3 -->
+
     </div><!-- closing container -->
 </div><!-- closing form -->
