added digi brum to festival page

--- a/festival/index.html
+++ b/festival/index.html
@@ -92,6 +92,11 @@ wait to see what they can produce."</p>
         <div class="grid3">
           <p><a href="http://www.microteam.co.uk"><img alt="Microteam Limited" src="/img/sponsors/MTlogo.jpg"></a></p>
         </div><!-- closing grid3 -->
+        
+        <div class="grid3">
+          <p><a href="http://www.digitalbirmingham.co.uk"><img alt="Digital Birmingham" src="/img/sponsors/DigiBrum.jpg"></a></p>
+        </div><!-- closing grid3 -->
+
 
     </div><!-- closing container -->
 </div><!-- closing form -->
