added digi brum to festival page

--- a/festival/index.html
+++ b/festival/index.html
@@ -94,7 +94,7 @@ wait to see what they can produce."</p>
         </div><!-- closing grid3 -->
         
         <div class="grid3">
-          <p><a href="http://www.digitalbirmingham.co.uk"><img alt="Digital Birmingham" src="/img/sponsors/DigiBrum.jpg"></a></p>
+          <p><a href="http://www.digitalbirmingham.co.uk"><img alt="Digital Birmingham" src="/img/sponsors/digibrum.jpg"></a></p>
         </div><!-- closing grid3 -->
 
 
