added birmingham city council to festival page

--- a/festival/index.html
+++ b/festival/index.html
@@ -97,6 +97,10 @@ wait to see what they can produce."</p>
           <p><a href="http://www.digitalbirmingham.co.uk"><img alt="Digital Birmingham" src="/img/sponsors/digibrum.jpg"></a></p>
         </div><!-- closing grid3 -->
 
+        <div class="grid3">
+          <p><a href="http://www.birmingham.gov.uk/"><img alt="Birmingham City Council" src="/img/sponsors/bcclogo.jpg"></a></p>
+        </div><!-- closing grid3 -->
+
 
     </div><!-- closing container -->
 </div><!-- closing form -->
