added birmingham city council to festival page

--- a/festival/index.html
+++ b/festival/index.html
@@ -98,7 +98,7 @@ wait to see what they can produce."</p>
         </div><!-- closing grid3 -->
 
         <div class="grid3">
-          <p><a href="http://www.birmingham.gov.uk/"><img alt="Birmingham City Council" src="/img/sponsors/bcclogo.jpg"></a></p>
+          <p><a href="http://www.birmingham.gov.uk/"><img alt="Birmingham City Council" src="/img/sponsors/bcclogo.png"></a></p>
         </div><!-- closing grid3 -->
 
 
