amended front page

--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@ title: 2012
   <div class="container">
 
     <div class="grid3">
+      <h2 id="headmaster">Main Sponsor</hr>
+      <p><a href="http://www.sap.com/uk/index.epx"><img alt="SAP" src="/img/sponsors/SAP_grad_R_pref.png" /></a></p>
+      
       <h2 id="countdown">YRS2012 begins in only:</h2>
       <script language="JavaScript">
       TargetDate = "08/06/2012 10:00 AM";
