amended front page

--- a/index.html
+++ b/index.html
@@ -89,10 +89,7 @@ title: 2012
 
     <div class="grid3">
       <h2 id="volunteer">Volunteer</h2>
-      <p>We need volunteers to help run YRS2012, everything
-      from copywriters to event organizers to community
-      managers. If you have some spare time, drop us an email
-      and tell us how you can help<br /><br /><a href="mailto:volunteers@youngrewiredstate.org">Get in contact &raquo;</a></p>
+      <p>We need volunteers to help on site at the Festival of Code in Birmingham. If you can help, please register <a href="http://festivalofcode.eventbrite.com/">here</a> and we will be in touch</p>
     </div><!-- closing grid3 -->
 
     <div class="grid3">
