added electric stage to festivals page

--- a/festival/index.html
+++ b/festival/index.html
@@ -101,6 +101,9 @@ wait to see what they can produce."</p>
           <p><a href="http://www.birmingham.gov.uk/"><img alt="Birmingham City Council" src="/img/sponsors/bcclogo.png"></a></p>
         </div><!-- closing grid3 -->
 
+        <div class="grid3">
+          <p><a href="www.electricstage.co.uk"><img alt="Electric Stage Co" src="/img/sponsors/esclogo.jpg"></a></p>
+        </div><!-- closing grid3 -->
 
     </div><!-- closing container -->
 </div><!-- closing form -->
