--- a/festival/index.html
+++ b/festival/index.html
@@ -8,7 +8,7 @@ title: Festival of Code
         <div class="title">
             <h1>Festival of Code 2012</h1>
         </div>
-        <p>Friday 10th to Sunday 12th sees the grand final of the Young Rewired State 2012 week. On the Friday night the young programmers will all come to the Custard Factory in Birmingham and have fireside chats whilst they code with wonderful people who are programmers doing great things, including representatives from Raspberry Pi, London Zoo and twilio amongst many others. Whilst they finish coding their apps and preparing their presentations they will be able to hear, chat and interact with some of the UK's greatest digital visionaries.</p>
+        <p>Friday 10th to Sunday 12th sees the grand final of the SAP Young Rewired State 2012 week. On the Friday night the young programmers will all come to the Custard Factory in Birmingham and have fireside chats whilst they code with wonderful people who are programmers doing great things, including representatives from Raspberry Pi, London Zoo and twilio amongst many others. Whilst they finish coding their apps and preparing their presentations they will be able to hear, chat and interact with some of the UK's greatest digital visionaries.</p>
 
         <p>They will have a massive sleepover in the Custard Factory preparing for the Saturday show and tell. Saturday brings a morning of heats where each centre will present in five concurrent streams, to five panels of esteemed judges with winners in four prize categories yet to be announced going forward to the Grand Finale in the afternoon.</p>
 
@@ -63,11 +63,11 @@ wait to see what they can produce."</p>
 
 <p>Prizes are awarded in the evening and then everyone can relax and celebrate underneath the arches of the Custard Factory.</p>
 
-<p>The schedule for the Festival of code in full is here: <a href="http://lanyrd.com/2012/festival-of-code/">Festival of Code on Lanyrd</a></p>
+<p>The schedule for the Festival of Code in full is here: <a href="http://lanyrd.com/2012/festival-of-code/">Festival of Code on Lanyrd</a></p>
 
 <p>To attend the festival on the Saturday show and tell, please sign up using the form <a href="http://yrs12foc.eventbrite.com/">here</a>. <strong>Be warned, we are proudly not funded by government, your tax money is better spent elsewhere, we rely only on sponsorship and run this event at no profit, every penny goes into making this happen (not people fees) - which is quite expensive even though we get away with a lot of donated stuff... and people. However, we cannot stretch to supplying you with food and booze, even though we would love to, so please bring cash with you for the bar and food concessions we will have on site.</strong></p> 
 
-<p>A big Thank You to the businesses and organisations of Birmingham that have helped us be able to put on this year's Festival of code.</p>
+<p>A big Thank You to the businesses and organisations of Birmingham that have helped us be able to put on this year's Festival of Code.</p>
 
         <div class="grid3">
           <p><a href="http://uk.linkedin.com/in/lararatnaraja"><img alt="Lara Ratnaraja" src="/img/sponsors/lara-1.jpg"></a></p>
