various misc changes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: 2012
   <div class="container" style="background: none;"></div>
   <div id="html5header"></div>
     <div class="container">
-    <div id="foc" class="title"><h1>YRS Festival of Code 6<sup>th</sup> &rarr; 12<sup>th</sup> August, 2012</h1></div>
+    <div id="foc" class="title"><h1>SAP YRS Festival of Code 6<sup>th</sup> &rarr; 12<sup>th</sup> August, 2012</h1></div>
 
   <iframe width="560" height="315" src="http://www.youtube-nocookie.com/embed/2Ws57UT_xX0" frameborder="0" allowfullscreen></iframe>
 
@@ -61,27 +61,27 @@ title: 2012
 
     <div class="grid3">
       <h2 id="kids">Young Programmers</h2>
-      <p>Heard enough? Sign up to attend the nearest Young Rewired
-      State event to you. We already have events in Wales and England
+      <p>Heard enough? Sign up to attend the nearest SAP Young Rewired
+      State 2012 event to you. We already have events in Wales and England
       and there are more to come around the world, so watch this space.<br /><br /><a href="/kids/">More info &raquo;</a></p>
     </div><!-- closing grid3 -->
 
     <div class="grid3">
       <h2 id="parents">Parents</h2>
-      <p>Want to find out a little more about the people behind Young
-        Rewired State? Talk with parents of past YRS attendees who have volunteered to help<br /><br /><a href="/parents/">Find out more &raquo;</a></p>
+      <p>Want to find out a little more about the people behind SAP Young
+        Rewired State 2012? Talk with parents of past YRS attendees who have volunteered to help<br /><br /><a href="/parents/">Find out more &raquo;</a></p>
     </div><!-- closing grid3 -->
 
     <div class="grid3">
       <h2 id="mentors">Mentors</h2>
       <p>Are you a geek over 18? Don't worry, you can sign up
       to become a Young Rewired State mentor and share
-      your knowledge with YRS2012 attendees.<br /><br /><a href="/mentors/">Find out more &raquo;</a></p>
+      your knowledge with SAP Young Rewired State 2012 attendees.<br /><br /><a href="/mentors/">Find out more &raquo;</a></p>
     </div><!-- closing grid3 -->
 
     <div class="grid3">
       <h2 id="centres">Centres</h2>
-      <p>Young Rewired State is a decentralized event that runs
+      <p>SAP Young Rewired State 2012 is a decentralized event that runs
       at multiple centres across the country. If you have some
       spare office space for a week and you're a technical
       organization then contact us!<br /><br /><a href="/centres/">Find out more &raquo;</a></p>
