--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@ title: 2012
   <div class="container" style="background: none;"></div>
   <div id="html5header"></div>
     <div class="container">
+    <div id="sponsor_ticker">
+      <div class="ticker">
+      <ul>
+        <li>"SAP is proud to be the head sponsor of this year’s YRS Festival of Code. We are excited about the competition and what each one of you will be able to create." – SAP</li>
+        <li>"We’re proud to support Young Rewired State and invest in you to build the future of communications. We've included some resources too." – Twilio</li>
+        <li>"We’re thrilled to be a part of YRS this year and can’t wait for it to get underway. The whole Indigo team would like to wish all involved – mentors, coders, organisers and everybody else – the very best of luck." – The Indigo Trust</li>
+        <li>"From everyone at @ThreeUK we wish you guys all the best of luck at #YRS2012 and look forward to seeing the great work produced at the end of the week!" – Three</li>
+        <li>"GoSquared was built out of playing around with designs and code while at school. We wish every participant the best of luck, and can't wait to see what you come out with!" – GoSquared</li>
+        <li>"Students of the code: congratulations on being a part of something amazingly special - the YRS Festival of Code. We're excited to support you through this journey and can't wait to see what you accomplish over these few, yet productive, days." – SendGrid</li>
+        <li>"At Google we believe passionately in the importance of computer science education and inspiring young people to get involved in coding. We're proud to be supporting the Festival of Code and wish the competitors every success. Feel lucky!" – Google</li>
+        <li>"AQA is very excited to sponsor Young Rewired State as we believe that given the right tools and inspiration any child can be empowered to create." – AQA</li>
+        <li>"We at Pearson are looking forward to meeting you and wish you all the best for YRS 2012! We can't wait to see the incredible things you will produce by the end of the week!" – Pearson</li>
+        <li>"So, you're all awesome, and you're gonna have an amazing few days!" – ScraperWiki</li>
+      </ul>
+      </div>
+    </div>
+    <script type="text/javascript">
+      var ticker = $(".ticker").ticker();
+    </script>
     <div id="foc" class="title"><h1>SAP YRS Festival of Code 6<sup>th</sup> &rarr; 12<sup>th</sup> August, 2012</h1></div>
 
   <iframe width="560" height="315" src="http://www.youtube-nocookie.com/embed/2Ws57UT_xX0" frameborder="0" allowfullscreen></iframe>
