added yumm cafe to festivals page

--- a/festival/index.html
+++ b/festival/index.html
@@ -105,5 +105,9 @@ wait to see what they can produce."</p>
           <p><a href="www.electricstage.co.uk"><img alt="Electric Stage Co" src="/img/sponsors/esclogo.jpg"></a></p>
         </div><!-- closing grid3 -->
 
+        <div class="grid3">
+          <p><a href="www.yummcafe.co.uk"><img alt="Yumm Cafe" src="/img/sponsors/yummcafe_logo.jpg"></a></p>
+        </div><!-- closing grid3 -->
+        
     </div><!-- closing container -->
 </div><!-- closing form -->
