added TSO to sponsors page

--- a/contact/index.html
+++ b/contact/index.html
@@ -14,28 +14,28 @@ title: Contact Us
 
             We are:
             <ul>
-                <li><p><a href="mailto:kids@youngrewiredstate.org">Lawrence and Kevin</a> &#8212; if you're a young person with questions about YRS</p></li>
+                <li><p><a href="mailto:kids@youngrewiredstate.org">Emma and Neil</a> &#8212; if you're a young person with questions about YRS</p></li>
 
                 <li><p><a href="mailto:angijlong@gmail.com">Angi</a> &#8212; parents: if you've got questions</p></li>
 
-                <li><p><a href="mailto:centres@youngrewiredstate.org">Neil</a> &#8212; centres, or prospective centres</p></li>
+                <li><p><a href="mailto:neil@rewiredstate.org">Neil</a> &#8212; centres, or prospective centres</p></li>
 
-                <li><p><a href="mailto:mentors@youngrewiredstate.org">Adam</a> &#8212; for mentors</p></li>
+                <li><p><a href="mailto:neil@rewiredstate.org">Neil</a> &#8212; for mentors</p></li>
 
-                <li><p><a href="mailto:sponsors@youngrewiredstate.org">Emma</a> &#8212; sponsors</p></li>
+                <li><p><a href="mailto:emma@rewiredstate.org">Emma</a> &#8212; sponsors</p></li>
 
-                <li><p><a href="mailto:festivalofcode@youngrewiredstate.org">Adam</a> &#8212; for the YRS Festival of Code</p></li>
+                <li><p><a href="mailto:emma@rewiredstate.org">Emma</a> &#8212; for the YRS Festival of Code</p></li>
 
-                <li><p><a href="mailto:ops@youngrewiredstate.org">Adam</a> &#8212; for all operational aspects of YRS</p></li>
+                <li><p><a href="mailto:neil@rewiredstate.org">Neil</a> &#8212; for all operational aspects of YRS</p></li>
 
-                <li><p><a href="mailto:press@youngrewiredstate.org">Emma</a> &#8212; press</p></li>
+                <li><p><a href="mailto:press@youngrewiredstate.org">Stephanie</a> &#8212; press</p></li>
 
                 <li><p><a href="http://twitter.com/#!/youngrewired">Issy</a> &#8212; for social media (or <a href="mailto:socialmedia@youngrewiredstate.org">drop her an email</a>)</p></li>
 
                 <li><p><a href="mailto:hello@youngrewiredstate.org">All other enquiries</a></p></li>
             </ul>
 
-            <p>For <strong>urgent</strong> enquiries you can call Emma on 077 3057 0647. We'll have more numbers in the run-up</p>
+            <p>For <strong>urgent</strong> enquiries you can call Emma on 07730 570647 or Neil on 07525 246356.</p>
         </div>
 
         <div class="clear"></div>
