--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -142,6 +142,11 @@ title: Sponsors
             <div class="grid3">
                 <p><a href="http://www.yousrc.com/"><img alt="YouSrc" src="/img/sponsors/yousrc.png" /></a></p>
             </div><!-- closing grid3 -->
+            
+            <div class="grid3">
+                <p><a href="http://www.tso.co.uk"><img alt="The Stationery Office" src="/img/sponsors/TSO.jpg" /></a></p>
+            </div><!-- closing grid3 -->
+            
 
             <br />
             <p>If you'd like to be a line-leader, please apply to the School <a href="mailto:hello@youngrewiredstate.org">Secretary</a>.</p>
