added advice document to kids page

--- a/kids/index.html
+++ b/kids/index.html
@@ -11,6 +11,13 @@ title: Kids
             <h1>Information for Kids</h1>
         </div>
             
+        <div class="advice">
+          <h2>Important Advice</h2>
+            <p>Here at Rewired State strongly feel it is really important to us that your talent is not exploited and your youth is not taken advantage of. To help with this, we have a produced an advice document. Please download it from <a href="/img/YRS_adviceforkids.pdf">here</a>.      
+        </div>
+
+        <h2>Participating in SAP Young Rewired State 2012</h2>
+        
             <p>Hopefully you've came to this page, because you're interested in YRS, and want to know more.</p>
 
             <p>To take part in YRS, you need to have
@@ -30,7 +37,7 @@ title: Kids
 
             <p>To take part in YRS, we need some information from you.
             Please fill out the form below, and in a few days or so,
-            you'll be hearing from Lawrence (on the phone).</p>
+            you'll be hearing from us.</p>
 
             <!-- signup form -->
                 <iframe src="https://cms.youngrewiredstate.org/signupperson+" style="width: 750px; height: 1600px; border: none;"></iframe>
