added advice document to kids page

--- a/kids/index.html
+++ b/kids/index.html
@@ -13,7 +13,7 @@ title: Kids
             
         <div class="advice">
           <h2>Important Advice</h2>
-            <p>Here at Rewired State strongly feel it is really important to us that your talent is not exploited and your youth is not taken advantage of. To help with this, we have a produced an advice document. Please download it from <a href="/img/YRS_adviceforkids.pdf">here</a>.      
+            <p>It is really important to us that your talent is not exploited and your youth is not taken advantage of. To help with this, we have a produced an advice document. Please do take time to read it, you can download it from <a href="/img/YRS_adviceforkids.pdf">here</a>.      
         </div>
 
         <h2>Participating in SAP Young Rewired State 2012</h2>
@@ -32,12 +32,7 @@ title: Kids
             week. If you have a preference for dev-tools, you will
             want those installed in advance.</p>
 
-            <p>We'll be updating this page with questions/answers, as
-            well as some more info, soon.</p>
-
-            <p>To take part in YRS, we need some information from you.
-            Please fill out the form below, and in a few days or so,
-            you'll be hearing from us.</p>
+            <p>To take part in YRS, we need some information from you. Please fill out the form below, and we will allocate you to a centre or remote mentor. This form will close at 9pm on the 27th August, when the Olympic opening ceremony begins</p>
 
             <!-- signup form -->
                 <iframe src="https://cms.youngrewiredstate.org/signupperson+" style="width: 750px; height: 1600px; border: none;"></iframe>
