add cloudfoundry quote to ticker

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ title: 2012
         <li>"AQA is very excited to sponsor Young Rewired State as we believe that given the right tools and inspiration any child can be empowered to create." – AQA</li>
         <li>"We at Pearson are looking forward to meeting you and wish you all the best for YRS 2012! We can't wait to see the incredible things you will produce by the end of the week!" – Pearson</li>
         <li>"So, you're all awesome, and you're gonna have an amazing few days!" – ScraperWiki</li>
+	<li>"The YRS participants are the future of our industry and we feel privileged to be involved in this event. Good luck to everyone involved and let's code!" – Peter Ledbrook, CloudFoundry</li>
       </ul>
       </div>
     </div>
