replaced form on centres page

--- a/centres/index.html
+++ b/centres/index.html
@@ -10,7 +10,7 @@ title: Centres
             <iframe src="https://cms.youngrewiredstate.org/data/api/centres.example" style="width: 100%; height: 620px; border: none;"></iframe>
 
 
-            <p>YRS centres are organisations across the UK who have space to host at least three young people. Ideally you would have some developers in-house, but we will send mentors and/or alumni for the week.
+            <p>YRS centres are organisations across the UK who have space to host at least five young people. Ideally you would have some developers in-house, but we will send mentors and/or alumni for the week.
 
 	    <br /><br />
 
@@ -52,10 +52,7 @@ title: Centres
 
             <p>If you'd like to be a centre, then please fill out the form below</p>
 
-            <!-- signup form -->
-            <iframe src="https://cms.youngrewiredstate.org/signupcentre.html"
-                    style="width: 750px; height: 1800px; border: none;"></iframe>
-            <!-- close signup form -->
+<p>Signups for SAP Young Rewired State 2012 are now closed. If you would like to register your interest in YRS 2013, please do so <a href="https://docs.google.com/a/rewiredstate.org/spreadsheet/viewform?formkey=dGs0ekRFMk1LellpUTJMLU9ZYldFRnc6MQ">here</a>.</p>
 
         </div>
         <div class="clear"></div>
