replaced form on kids page

--- a/kids/index.html
+++ b/kids/index.html
@@ -32,11 +32,7 @@ title: Kids
             week. If you have a preference for dev-tools, you will
             want those installed in advance.</p>
 
-            <p>To take part in YRS, we need some information from you. Please fill out the form below, and we will allocate you to a centre or remote mentor. This form will close at 9pm on the 27th August, when the Olympic opening ceremony begins</p>
-
-            <!-- signup form -->
-                <iframe src="https://cms.youngrewiredstate.org/signupperson+" style="width: 750px; height: 1600px; border: none;"></iframe>
-            <!-- close signup form -->
+<p>Signups for SAP Young Rewired State 2012 are now closed. If you would like to register your interest in YRS 2013, please do so <a href="https://docs.google.com/a/rewiredstate.org/spreadsheet/viewform?formkey=dGs0ekRFMk1LellpUTJMLU9ZYldFRnc6MQ">here</a>.</p>
 
         </div><!-- close leftdiv -->
 
