fixed typo on kids page

--- a/kids/index.html
+++ b/kids/index.html
@@ -13,7 +13,7 @@ title: Kids
             
         <div class="advice">
           <h2>Important Advice</h2>
-            <p>It is really important to us that your talent is not exploited and your youth is not taken advantage of. To help with this, we have a produced an advice document. Please do take time to read it, you can download it from <a href="/img/YRS_adviceforkids.pdf">here</a>.      
+            <p>It is really important to us that your talent is not exploited and your youth is not taken advantage of. To help with this, we have produced an advice document. Please do take time to read it, you can download it from <a href="/img/YRS_adviceforkids.pdf">here</a>.      
         </div>
 
         <h2>Participating in SAP Young Rewired State 2012</h2>
