added judge to festival page

--- a/festival/index.html
+++ b/festival/index.html
@@ -61,6 +61,15 @@ wait to see what they can produce."</p>
 
 <p><a href="http://uk.linkedin.com/pub/jonathan-luff/39/993/b77">Jonathan Luff on LinkedIn</a></p>
 
+<h3>Thomas Grassl</h3>
+
+<img src="../img/thomasgrassl.jpg">
+
+<p>Thomas Grassl is Senior Director leading SAP’s Global Developer Relations programs for Mobile, Databases, Cloud, Tools and APIs. 
+"Developers bring ideas, software and innovation to life. We at SAP are very excited to be a part of this event and support young developers in their journey to become the next generation that will shape the future and help the world run better. I'm looking forward to many exciting and inspiring ideas and to congratulating the winners."</p> 
+
+<p>&nbsp;</p>
+
 <p>Prizes are awarded in the evening and then everyone can relax and celebrate underneath the arches of the Custard Factory.</p>
 
 <p>The schedule for the Festival of Code in full is here: <a href="http://lanyrd.com/2012/festival-of-code/">Festival of Code on Lanyrd</a></p>
@@ -102,12 +111,16 @@ wait to see what they can produce."</p>
         </div><!-- closing grid3 -->
 
         <div class="grid3">
-          <p><a href="www.electricstage.co.uk"><img alt="Electric Stage Co" src="/img/sponsors/esclogo.jpg"></a></p>
+          <p><a href="http://www.electricstage.co.uk"><img alt="Electric Stage Co" src="/img/sponsors/esclogo.jpg"></a></p>
         </div><!-- closing grid3 -->
 
         <div class="grid3">
-          <p><a href="www.yummcafe.co.uk"><img alt="Yumm Cafe" src="/img/sponsors/yummcafe_logo.jpg"></a></p>
+          <p><a href="http://www.yummcafe.co.uk"><img alt="Yumm Cafe" src="/img/sponsors/yummcafe_logo.jpg"></a></p>
         </div><!-- closing grid3 -->
-        
+
+        <div class="grid3">
+          <p><a href="http://bayleaf-restaurant.co.uk"><img alt="Bay Leaf" src="/img/sponsors/bayleafcafe.png"></a></p>
+        </div><!-- closing grid3 -->
+ 
     </div><!-- closing container -->
 </div><!-- closing form -->
