added media partner to sponsors page.

--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -150,6 +150,8 @@ title: Sponsors
 
             <br />
             <p>If you'd like to be a line-leader, please apply to the School <a href="mailto:hello@youngrewiredstate.org">Secretary</a>.</p>
+            
+The SAP Young Rewired State 2101 media partner is <a href=""><img alt="The Kernel" src="/img/sponsors/thekernel.png">
 
     </div><!-- closing container -->
 </div><!-- closing section6 -->
