--- a/mentors/index.html
+++ b/mentors/index.html
@@ -56,7 +56,7 @@ title: Mentors
             </ul>
 
             <!-- signup form -->
-                <iframe src="https://cms.youngrewiredstate.org/signupmentor.html" style="width: 750px; height: 1400px; border: none;"></iframe>
+<p>Signups for SAP Young Rewired State 2012 are now closed. If you would like to register your interest in YRS 2013, please do so <a href="https://docs.google.com/a/rewiredstate.org/spreadsheet/viewform?formkey=dGs0ekRFMk1LellpUTJMLU9ZYldFRnc6MQ">here</a>.</p>
             <!-- close signup form -->
     </div><!-- closing container -->
 </div><!-- closing form -->
