--- a/mentors/index.html
+++ b/mentors/index.html
@@ -43,7 +43,7 @@ title: Mentors
                 A: Yes.</li>
 
                 <li><strong>Q: Will travel and subsistence be covered for mentors?</strong><br />
-                A: Assuming we get the sponsorship we are aiming for then yes. If not, there will be a hardship pot.</li>
+                A: Sorry, no.</li>
 
                 <li><strong>Q: Do mentors need to be available every day of the week 6 &rarr; 12<sup>th</sup> August?</strong><br />
                 A: Not at all, we will be in touch and will work out which days you are free. But <em>be warned</em>, it is very addictive and compelling and you will want to be there, especially at the end!</li>
